Wed Sep 12 13:13:52 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * config/mysql.mpb:
        * config/mysqlpp.mpb:

          Added base projects for MySQL and MySQL++.

Fri Sep  7 13:41:43 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:
        * modules/TemplateParser.pm:

          Fixed a bug where using two different custom types in the same
          project, both with 'commandflags' mapped to a new keyword, would
          cause scoped settings from one project type to be applied to the
          other project type.

Tue Aug 21 15:27:52 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * templates/vc8.mpd:
        * templates/vc8platforms.mpt:

          Added support for the Windows Mobile 6 platform. This platform
          is targeted specifying the "Windows Mobile 6 Standard SDK (ARMV4I)"
          platform.

Thu Aug 16 12:01:28 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * prj_install.pl:

          Fixed a bug where copying an executable didn't set the execute
          permissions on the new file.  Also, unnecessary intermediate
          directories are no longer made during installation.

Fri Aug 10 18:15:22 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * docs/USAGE:
        * modules/Options.pm:

          Fixed the misspelling of Graphviz.

        * modules/AutomakeWorkspaceCreator.pm:

          Fixed a couple of issues:

          1) Makefile.am is no longer overwritten if the only difference is
             in a comment.
          2) The existing configure.ac is edited to contain all of the new
             Makefiles.  If configure.ac doesn't exist, it is created and
             the Makefile list is written out to configure.ac.Makefiles.
          3) @NAME@ substitutions now only happen in the top-level
             workspace.

        * modules/ConfigParser.pm:

          Only warn the user once about each undefined environment variable.
